# rust-web-api

./: .env  Cargo.toml  README.md  dev.sh
src/: main.rs
src/base/: mod.rs
src/routes/: mod.rs  todo_controller.rs  user_controller.rs
src/services/: mod.rs  user_doc.rs
tests/: http-client.env.json  rest-api.http  test.ts
