[package]
name = "rust-web-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1"
serde_json = "1"
jsonwebtoken = "7"
rand = "0.8.4"
base64 = "0.13.0"
uuid = "0.8.2"
jwt = "0.15.0"
hmac = "0.11.0"
sha2 = "0.9.8"

[dependencies.mongodb]
version = "2.0.1"
default-features = false
features = ["sync"]
